--- a/FathyAbdelshahid/personalBio.html
+++ b/FathyAbdelshahid/personalBio.html
@@ -12,7 +12,7 @@
 
 <!-- Header -->
 <header id="header">
- <a href="Homepage.html" class="title">Fathy Abdelshahid</a>
+ <a href="index.html" class="title">Fathy Abdelshahid</a>
   <nav>
     <ul>
       <li><a href="Homepage.html">Home</a></li>
