--- a/FathyAbdelshahid/personalProject.html
+++ b/FathyAbdelshahid/personalProject.html
@@ -79,7 +79,7 @@
 				<a href="Homepage.html" class="title">Fathy Abdelshahid</a>
 				<nav>
 					<ul>
-						<li><a href="Homepage.html" >Home</a></li>
+						<li><a href="index.html" >Home</a></li>
 						<li><a href="personalBio.html" >Personal Biography</a></li>
 						<li><a href="workExperience.html" >Work Experience</a></li>
 						<li><a href="personalProject.html" class="active">Personal Project</a></li>
