--- a/FathyAbdelshahid/workExperience.html
+++ b/FathyAbdelshahid/workExperience.html
@@ -55,10 +55,10 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="Homepage.html" class="title">Fathy Abdelshahid</a>
+				<a href="index.html" class="title">Fathy Abdelshahid</a>
 				<nav>
 					<ul>
-						<li><a href="Homepage.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="personalBio.html" >Personal Biography</a></li>
 						<li><a href="workExperience.html" class="active">Work Experience</a></li>
 						<li><a href="personalProject.html" >Personal Project</a></li>
