--- a/FathyAbdelshahid/personalProject.html
+++ b/FathyAbdelshahid/personalProject.html
@@ -76,7 +76,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="Homepage.html" class="title">Fathy Abdelshahid</a>
+				<a href="index.html" class="title">Fathy Abdelshahid</a>
 				<nav>
 					<ul>
 						<li><a href="index.html" >Home</a></li>
