--- a/FathyAbdelshahid/personalBio.html
+++ b/FathyAbdelshahid/personalBio.html
@@ -15,7 +15,7 @@
  <a href="index.html" class="title">Fathy Abdelshahid</a>
   <nav>
     <ul>
-      <li><a href="Homepage.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="personalBio.html" class="active">Personal Biography</a></li>
       <li><a href="workExperience.html" >Work Experience</a></li>
       <li><a href="personalProject.html" >Personal Project</a></li>
