--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Fathy Abdelshahid</title>
 		<meta charset="utf-8" />
+		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script src="https://kit.fontawesome.com/a2ecfaf3c8.js" crossorigin="anonymous"></script>
@@ -83,7 +84,7 @@
 									<h2>Work Experience</h2>
 									<p></p>
 									<ul class="actions">
-										<li><a href="workExperience.html" class="button">See more</a></li>
+										<li><a href="workExperience.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -141,7 +142,7 @@
 								</section>
 							</div>
 							<ul class="actions">
-								<li><a href="personalProject.html" class="button">Learn more Through my Projects</a></li>
+								<li><a href="personalProject.html" class="button"> Check Out My Projects!</a></li>
 							</ul>
 						</div>
 					</section>
