--- a/personalProject.html
+++ b/personalProject.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>Personal Projects - Fathy Abdelshahid</title>
 		<meta charset="utf-8" />
+		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -101,32 +102,32 @@
 							<ul class="cards-container">
 								<!-- Card 1 -->
 								<li>
-									<a href="http://localhost:63342/Summer%20Comp%2024/homePage_coptic.html?_ijt=g5qci14e0p6tdhdp46gqe5ousv&_ij_reload=RELOAD_ON_SAVE" target="_blank" class="card">
+									<a href="https://copticatlas.netlify.app" target="_blank" class="card">
 										<img src="images/project/copticAtlas.png" width="308" height="308" alt="Coptic Atlas">
 										<div class="card-content">
 											<h3>Coptic Atlas</h3>
-											<p>Developed on Dec 15, 2023<br> </p>
+											<p>Developed on Dec 15, 2023<br>API use</p>
 										</div>
 									</a>
 								</li>
 
 								<!-- Card 2 -->
 								<li>
-									<a href="http://localhost:63342/FIT3170_Trial/index.html?_ijt=qj6llcft2q8qr380autrqf9uf6&_ij_reload=RELOAD_ON_SAVE" target="_blank" class="card">
+									<a href="https://my3dloginpage.netlify.app" target="_blank" class="card">
 										<img src="images/project/3dlogin.png" width="308" height="308" alt="3D Login Page">
 										<div class="card-content">
 											<h3>3D Login Page</h3>
-											<p>Developed on July 1, 2024<br></p>
+											<p>Developed on July 1, 2024<br>CSS styling</p>
 										</div>
 									</a>
 								</li>
 								<!-- Card 3 -->
 								<li>
-									<a href="http://localhost:63342/group-29/Sandbox/productBacklog.html" target="_blank" class="card">
+									<a href="https://scrumkanboard.netlify.app" target="_blank" class="card">
 										<img src="images/project/kanbanBoard.png" width="458" height="308" alt="Kanban Board (Scrum Team Tool)">
 										<div class="card-content">
 											<h3>Kanban Board (Scrum Team Tool)</h3>
-											<p>Developed on July 1, 2022<br></p>
+											<p>Developed on July 1, 2022<br>Object oriented Design(OOD)</p>
 										</div>
 									</a>
 								</li>
@@ -136,7 +137,7 @@
 										<img src="images/project/githublogo.png" width="358" height="308" alt="Organic Ginger">
 										<div class="card-content">
 											<h3>Walking Dead Terminal Game</h3>
-											<p>Developed on August 1, 2023<br>For terminal use only</p>
+											<p>Developed on August 1, 2023<br>Avaliable Only through github</p>
 										</div>
 									</a>
 								</li>
@@ -146,7 +147,7 @@
 										<img src="images/project/githublogo.png" width="300" height="308"alt="Organic Ginger">
 										<div class="card-content">
 											<h3>Magic Drawing Board</h3>
-											<p>Developed on April 1, 2023 <br>Currently running on terminal only </p>
+											<p>Developed on April 1, 2023 <br>Avaliable Only through github</p>
 										</div>
 									</a>
 								</li>
@@ -157,7 +158,7 @@
 										<img src="images/project/construction.png" width="308" height="308" alt="Organic Ginger">
 										<div class="card-content">
 											<h3>Rock Paper Shazam</h3>
-											<p>shhhhh! currently being Developed<br> This app will host 100+ games/chatrooms </p>
+											<p>shhhhh! currently being Developed<br> This app will host 100+ Players/chatrooms </p>
 										</div>
 									</a>
 								</li>
