updated the logo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Fathy Abdelshahid</title>
 		<meta charset="utf-8" />
-		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="images/better_favicon.png" type="image/x-icon">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script src="https://kit.fontawesome.com/a2ecfaf3c8.js" crossorigin="anonymous"></script>
