--- a/personalProject.html
+++ b/personalProject.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Personal Projects - Fathy Abdelshahid</title>
 		<meta charset="utf-8" />
-		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="images/better_favicon.png" type="image/x-icon">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
