updated to open github in a new link instead

--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
 										<li>
 											<h3><i class="fa-regular fa-circle-user"></i> Social</h3>
 											<ul class="icons">
-												<li><a href="https://github.com/Fathy1010" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="https://www.linkedin.com/in/fathy-abdelshahid-1b02ab25b/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://github.com/Fathy1010" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+												<li><a href="https://www.linkedin.com/in/fathy-abdelshahid-1b02ab25b/" class="icon brands fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
 									</ul>
