updated some minor errors

--- a/personalProject.html
+++ b/personalProject.html
@@ -134,37 +134,37 @@
 										<img src="images/project/3dlogin.png" width="308" height="308" alt="3D Login Page">
 										<div class="card-content">
 											<h3>3D Login Page</h3>
-											<p>Developed on July 1, 2024<br>CSS styling</p>
+											<p>Developed on Jul 1, 2024<br>CSS styling</p>
 										</div>
 									</a>
 								</li>
 								<!-- Card 3 -->
 								<li>
 									<a href="https://scrumkanboard.netlify.app" target="_blank" class="card">
-										<img src="images/project/kanbanBoard.png" width="308" height="308" alt="Kanban Board (Scrum Team Tool)">
+										<img src="images/project/kanbanBoard.png" width="auto" height="auto" alt="Kanban Board (Scrum Team Tool)">
 										<div class="card-content">
 											<h3>Kanban Board (Scrum Team Tool)</h3>
-											<p>Developed on July 1, 2022<br>Object oriented Design(OOD)</p>
+											<p>Developed on Jul 1, 2022<br>Object oriented Design(OOD)</p>
 										</div>
 									</a>
 								</li>
 								<!-- Card 4 -->
 								<li>
 									<a href="https://github.com/Fathy1010/Walking-Dead-Game" target="_blank" class="card">
-										<img src="images/project/githublogo.png" width="308" height="308" alt="Organic Ginger">
+										<img src="images/project/githublogo.png" width="auto" height="auto" alt="Organic Ginger">
 										<div class="card-content">
 											<h3>Walking Dead Terminal Game</h3>
-											<p>Developed on August 1, 2023<br> Access Only through github</p>
+											<p>Developed on Aug 1, 2023<br> Access Only through github</p>
 										</div>
 									</a>
 								</li>
 								<!-- Card 5 -->
 								<li>
 									<a href="https://github.com/Fathy1010/Magic-Drawing-Board/blob/main/23-S1-A1-main/README.md" target="_blank" class="card">
-										<img src="images/project/githublogo.png" width="308" height="308"alt="Organic Ginger">
+										<img src="images/project/githublogo.png" width="auto" height="auto"alt="Organic Ginger">
 										<div class="card-content">
 											<h3>Magic Drawing Board</h3>
-											<p>Developed on April 1, 2023 <br> Access Only through github</p>
+											<p>Developed on Apr 1, 2023 <br> Access Only through github</p>
 										</div>
 									</a>
 								</li>
@@ -172,7 +172,7 @@
 								<!-- Card 6 -->
 								<li>
 									<a href="" target="_blank" class="card">
-										<img src="images/project/construction.png" width="308" height="308" alt="Organic Ginger">
+										<img src="images/project/construction.png" width="auto" height="auto" alt="Organic Ginger">
 										<div class="card-content">
 											<h3>Rock Paper Shazam</h3>
 											<p>shhhhh! currently being Developed<br> This app will host 100+ Players/chatrooms </p>
