--- a/workExperience.html
+++ b/workExperience.html
@@ -147,8 +147,8 @@
 									</div>
 									<div class="job-details">
 										<div class="company-info">
-											<h3>Retail Associate</h3>
-											<p class="company-name">101 Physio</p>
+											<h3>Receptionist </h3>
+											<p class="company-name">&nbsp;&nbsp;&nbsp;&nbsp; 101 Physio</p>
 										</div>
 										<p class="job-duration">Jun 2022 - Dec 2023</p>
 										<p class="job-description">Skills Acquired:<ul>
