--- a/index.html
+++ b/index.html
@@ -242,12 +242,13 @@
 					}
 
 					window.onclick = function(event) {
-						if (event.target == modal) {
+						if (event.target === modal) {
 							modal.style.display = "none";
 							iframe.src = "";
 						}
 					}
 				}
+
 
 			</script>
 		<script>
