updated personal bio

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 									<ul class="contact">
 										<li>
 											<h3><i class="fa-solid fa-map-pin"></i> Address</h3>
-											<span>Keilor Downs, VIC 3038<br />
+											<span>Caroline Springs, VIC 3023<br />
 											Australia</span>
 										</li>
 										<li>
