--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<!-- Section One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a class="image"><img src="images/stic1.png" alt="" data-position="center center" /></a>
+							<a class="image"><img src="images/personal_bio.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Personal Biography</h2>
