looks more professional mow with updated pictures

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							</div>
 						</section>
 						<section>
-							<a class="image"><img src="images/stic5.png" alt="" data-position="top center" /></a>
+							<a class="image"><img src="images/workexp.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Work Experience</h2>
@@ -90,7 +90,7 @@
 							</div>
 						</section>
 						<section>
-							<a  class="image"><img src="images/stic4.png" alt="" data-position="25% 25%" /></a>
+							<a  class="image"><img src="images/personalproject.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Personal Projects</h2>
