--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 									<h2>Personal Biography</h2>
 									<p></p>
 									<ul class="actions">
-										<li><a href="page_down.html" class="button">Learn a bit more about ME!</a></li>
+										<li><a href="personalBio.html" class="button">Learn a bit more about ME!</a></li>
 									</ul>
 								</div>
 							</div>
