--- a/personalProject.html
+++ b/personalProject.html
@@ -105,6 +105,16 @@
 							<span class="image fit"><img src="" alt="" /></span>
 
 							<ul class="cards-container">
+								<li>
+									<a href="https://caffeine-tracker.base44.app" target="_blank" class="card" width="308" height="308">
+										<img src="images/project/construction.png" width="308" height="308" alt="coffee">
+										<div class="card-content">
+											<h3>caffeineIQ</h3>
+											<p>Developed on Dec 19, 2025<br> Auth, Data, Graphing & CSS styling & API </p>
+										</div>
+									</a>
+								</li>
+								
 								<!-- Card 2 -->
 								<li>
 									<a href="https://my-3d-avatar.netlify.app" target="_blank" class="card" width="308" height="308">
@@ -207,3 +217,4 @@
 
 	</body>
 </html>
+
