new coffee pic Update personalProject.html
added coffee pic

--- a/personalProject.html
+++ b/personalProject.html
@@ -107,7 +107,7 @@
 							<ul class="cards-container">
 								<li>
 									<a href="https://caffeine-tracker.base44.app" target="_blank" class="card" width="308" height="308">
-										<img src="images/project/construction.png" width="308" height="308" alt="coffee">
+										<img src="images/project/coffee.png" width="308" height="308" alt="coffee">
 										<div class="card-content">
 											<h3>caffeineIQ</h3>
 											<p>Developed on Dec 19, 2025<br> Auth, Data, Graphing & CSS styling & API </p>
@@ -217,4 +217,5 @@
 
 	</body>
 </html>
+
 
