--- a/personalProject.html
+++ b/personalProject.html
@@ -110,7 +110,7 @@
 										<img src="images/coffee.png" width="308" height="308" alt="coffee">
 										<div class="card-content">
 											<h3>caffeineIQ</h3>
-											<p>Developed on Dec 19, 2025<br> Auth, Data, Graphing & CSS styling & API </p>
+											<p>Developed on Dec 19, 2025<br> Auth, Data, Graphing & CSS styling & API & AI development </p>
 										</div>
 									</a>
 								</li>
@@ -217,6 +217,7 @@
 
 	</body>
 </html>
+
 
 
 
